Force reflow on default font change, since style data comparison is not sufficient for things not reflected in style data.  b=394057  r+sr=roc  a=blocking1.9+