dom/src/base/nsHistory.cpp
@@ -295,7 +295,7 @@ nsHistory::Go()
       nsPresContext *pcx;
       if (doc && (shell = doc->GetPrimaryShell()) &&
           (pcx = shell->GetPresContext())) {
-        pcx->RebuildAllStyleData();
+        pcx->RebuildAllStyleData(NS_STYLE_HINT_REFLOW);
       }
 
       return NS_OK;
